@@ -172,3 +172,5 @@ They are not supported by esxDOS."
 -tecla F para activar/desactivar modo prism zxuno
 
 -cpc stereo
+
+
